Optimize Chunk map/flatMap and implement SIMD/Scalar glue